--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,32 @@
 <!Doctype html>
+
 <html> 
 </html>
 <head>
 
 <meta charset="utf-8">
+
+<link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <p>Welcome to the chat app</p>
+<body class="chat">
+    
+    <div class="chat__sidebar">
+    <h3>Online People</h3>
+    <div id="users"></div>    
+    </div>
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages"> </ol>
 
-    <ol id="messages"> </ol>
+        <div class="chat__footer"> 
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Message"  autofocus autocomplete="off">
+                <button>Send</button>
+            </form>
+            <button id="send-location">Send location</button>
 
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Message">
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+        </div>
+    </div>
+  
 
     <script src="/socket.io/socket.io.js"> </script>
     <script src="/js/libs/jquery-3.5.1.min.js" > </script>
