--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,14 @@
             </div>
             <div class="form-field">
                 <label>Romme Name</label>
-             <input type="text" name="room"/>
+             <!-- <input type="text" name="room"/> -->
+
+             <select id="room" name="room">
+                <option value="friends">Friends</option>
+                <option value="staff">Staff</option>
+                <option value="office">Office </option>
+                <option value="student">Students</option>
+              </select> 
 
             </div>
             <div class="form-field">
