--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
                 <h3>Join a chat</h3>
             </div>
             <div class="form-field">
-                <label>Display Name</label>
+                <label>User Name</label>
                 <input type="text" name="name" autofocus/>
             </div>
             <div class="form-field">
-                <label>Romme Name</label>
+                <label>Room Name</label>
              <!-- <input type="text" name="room"/> -->
 
              <select id="room" name="room">
